--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@ body {
   padding: 0;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: aliceblue;
 }
